--- a/vscodeSettings.json
+++ b/vscodeSettings.json
@@ -76,6 +76,10 @@
   "editor.inlineSuggest.enabled": true,
   "editor.lineHeight": 30,
   "editor.linkedEditing": true,
+  "editor.minimap.renderCharacters": false,
+  "editor.scrollbar.vertical": "hidden",
+  "editor.scrollbar.horizontal": "hidden",
+  "editor.padding.top": 15,
   "editor.renderLineHighlight": "all",
   "editor.semanticTokenColorCustomizations": {
     "[One Monokai]": {
@@ -258,48 +262,60 @@
   "window.commandCenter": true,
   "window.menuBarVisibility": "compact",
   "window.title": "${activeFolderMedium}\\${activeEditorShort}",
-  "workbench.activityBar.visible": false,
   "workbench.colorTheme": "One Monokai",
   "workbench.colorCustomizations": {
-    "activityBar.background": "#282C34",
-    "editor.background": "#282C34",
+    "activityBar.background": "#181819",
+    "editor.background": "#181819",
+    "editor.lineHighlightBackground": "#181819",
+    "editor.lineHighlightBorder": "#333333",
+    "editor.selectionBackground": "#3E4451",
+    "editor.selectionHighlightBackground": "#333333",
     "editorBracketHighlight.foreground1": "#c172d9",
     "editorBracketHighlight.foreground2": "#5caeef",
     "editorBracketHighlight.foreground3": "#dfb976",
-    "editor.lineHighlightBackground": "#21252B",
-    "editor.selectionBackground": "#3E4451",
-    "editor.selectionHighlightBackground": "#333333",
     "editorCursor.foreground": "#3178C6",
-    "editorGroup.emptyBackground": "#282C34",
-    "editorGroupHeader.tabsBackground": "#21252B",
-    "editorHoverWidget.background": "#21252B",
-    "editorSuggestWidget.background": "#21252B",
+    "editorGroup.emptyBackground": "#181819",
+    "editorGroupHeader.tabsBackground": "#202022",
+    "editorHoverWidget.background": "#202022",
+    "editorSuggestWidget.background": "#202022",
     "editorSuggestWidget.selectedBackground": "#333333",
-    "input.background": "#282C34",
-    "menu.background": "#21252B",
+    "input.background": "#181819",
+    "list.activeSelectionBackground": "#181819",
+    "list.activeSelectionForeground": "#b8b6b6",
+    "list.focusBackground": "#181819",
+    "list.focusOutline": "#333333",
+    "list.inactiveSelectionBackground": "#181819",
+    "list.inactiveSelectionForeground": "#b8b6b6",
+    "menu.background": "#202022",
     "menu.selectionBackground": "#333333",
-    "quickInput.background": "#21252B",
+    "quickInput.background": "#202022",
     "quickInputList.focusBackground": "#333333",
-    "scrollbarSlider.background": "#21252B",
-    "sideBar.background": "#282C34",
-    "sideBar.border": "#333333",
-    "statusBar.background": "#282C34",
-    "tab.activeBackground": "#282C34",
-    "tab.border": "#21252B",
-    "tab.inactiveBackground": "#21252B",
+    "scrollbarSlider.background": "#202022",
+    "sideBar.background": "#181819",
+    "sideBar.border": "#181819",
+    "statusBar.background": "#181819",
+    "tab.activeBackground": "#181819",
+    "tab.border": "#202022",
+    "tab.inactiveBackground": "#202022",
     "tab.inactiveForeground": "#b8b6b6",
-    "terminal.background": "#282C34",
+    "terminal.background": "#181819",
     "terminalCursor.foreground": "#3178C6",
-    "titleBar.activeBackground": "#21252B",
-    "titleBar.inactiveBackground": "#21252B",
-    "toolbar.activeBackground": "#282C34"
+    "titleBar.activeBackground": "#202022",
+    "titleBar.inactiveBackground": "#202022",
+    "toolbar.activeBackground": "#181819",
   },
+  "workbench.tree.renderIndentGuides": "none",
   "workbench.editor.enablePreview": false,
   "workbench.editorAssociations": {
     "*.pdf": "latex-workshop-pdf-hook"
   },
-  "workbench.iconTheme": "icons",
+  "customizeUI.listRowHeight": 40,
+  "workbench.activityBar.visible": false,
+  "workbench.iconTheme": "moxer-icons",
+  "workbench.list.smoothScrolling": true,
   "workbench.startupEditor": "none",
+  "workbench.statusBar.visible": false,
   "zenMode.hideLineNumbers": false,
   "zenMode.hideTabs": false,
+  "explorer.compactFolders": false,
 }
